--- a/css/main.css
+++ b/css/main.css
@@ -131,14 +131,13 @@ html{
 nav{
 	background: #2C3E50;
 }
-
-.nav-sizer{
+#nav-sizer{
 	width: 940px;
 	height: 70px;
 	margin: 0 auto;
 }
 
-.nav-sizer a{
+#nav-sizer a{
 	color: #FFF;
 	text-decoration: none;
 }
@@ -307,10 +306,18 @@ nav{
 
 footer{
 	clear: both;
+	font-size: 12px;
+}
+
+#footer-sizer{
+	width: 960px;
+	margin: 0 auto;
 }
 
 footer a{
-	float: none;
+	display: block;
+	text-decoration: none;
+	color: #000;
 }
 
 
