--- a/css/main.css
+++ b/css/main.css
@@ -118,7 +118,11 @@ textarea {
 */
 
 
-/* General Page Styles */
+/* 	General Page Styles
+	-------------------
+	-------------------
+	------------------- */
+
 
 html{
 	background: #F2F2E2;
@@ -143,7 +147,11 @@ button:hover{
 }
 
 
-/* Navigation Styles */
+/* 	Navigation Styles
+	-------------------
+	-------------------
+	------------------- */
+
 
 nav{
 	background: #2C3E50;
@@ -196,8 +204,13 @@ nav .active{
 
 
 
-/* Content Styles */
+/* 	Content Styles 
+	-------------------
+	-------------------
+	------------------- */
 
+
+/* Landing */
 .cta-search{
 	width: 940px;
 	margin: 0 auto;
@@ -258,9 +271,6 @@ nav .active{
 	border-radius: 3px;
 }
 
-
-/* Landing About */
-
 .landing-about{
 	overflow: hidden;
 	background: #34495E;
@@ -307,7 +317,91 @@ nav .active{
 	width: 240px;
 }
 
-/* Footer */
+
+/* Register*/
+#register .content{
+	width: 640px;
+	margin: 0 auto;
+}
+
+#register .content form input{
+	display: block;
+	width: 300px;
+	margin: 0 auto;
+}
+
+
+/* Social Media Buttons */
+.sm-btn{
+	width: 220px;
+	height: 36px;
+	display: block;
+	-webkit-border-radius: 3px;
+	-moz-border-radius: 3px;
+	border-radius: 3px;
+	line-height: 36px;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.sm-btn a{
+	text-decoration: none;
+	color: #FFF;
+	font-size: 14px;
+	font-weight: 600;
+	margin: 0 0 0 60px;
+}
+
+.fb-btn{
+	background: #3C5A99;
+	background-image: url("../img/icons/facebook.png"); 
+	background-repeat: no-repeat;
+	background-size: 14px 30px;
+	background-position: left center;
+	background-position-x: 10px;
+	
+}
+
+.twitter-btn{
+	background: #07ABF0;
+	background-image: url("../img/icons/twitter.png"); 
+	background-repeat: no-repeat;
+	background-size: 30px 20px;
+	background-position: left center;
+	background-position-x: 10px;
+}
+
+.fb-btn:hover{
+	background: #2C4570;
+	background-image: url("../img/icons/facebook.png"); 
+	background-repeat: no-repeat;
+	background-size: 14px 30px;
+	background-position: left center;
+	background-position-x: 10px;
+}
+
+.twitter-btn:hover{
+	background: #0A91C1;
+	background-image: url("../img/icons/twitter.png"); 
+	background-repeat: no-repeat;
+	background-size: 30px 20px;
+	background-position: left center;
+	background-position-x: 10px;
+}
+
+
+
+
+
+
+
+
+
+
+/* 	Footer 
+	-------------------
+	-------------------
+	------------------- */
 
 footer{
 	clear: both;
