--- a/css/main.css
+++ b/css/main.css
@@ -317,26 +317,55 @@ nav .active{
 	width: 240px;
 }
 
-/* Social Media Buttons */
-.sm-btn{
-	width: 220px;
-	height: 35px;
+/* General Register/Login Styles  */
+.content form{
+	width: 300px;
+	margin: 0 auto;
+}
+
+.content form input{
 	display: block;
+	width: 300px;
+	height: 36px;
+	margin: 10px 0;
 	-webkit-border-radius: 3px;
 	-moz-border-radius: 3px;
 	border-radius: 3px;
-	line-height: 36px;
-	margin-left: auto;
-	margin-right: auto;
-	padding-right: 5px;
+	border: #E67E22 solid 1px;
+	padding-left: 10px;
 }
 
-.sm-btn a{
-	text-decoration: none;
+.content{
+	width: 640px;
+	height: 375px;
+	margin: 0 auto;
+}
+
+#register nav, #login nav{
+	margin: 0 0 90px 0;
+}
+
+#register footer, #login footer{
+	margin: 90px 0 0 0;
+}
+
+/* Social Media Buttons */
+.sm-btn{
+	width: 220px;
+	height: 40px;
+	display: inline-block;
+	-webkit-border-radius: 3px;
+	-moz-border-radius: 3px;
+	border-radius: 3px;
+	line-height: 40px;
+	cursor: pointer;
 	color: #FFF;
-	font-size: 14px;
-	font-weight: 600;
-	margin: 0 0 0 60px;
+	margin: 40px 10px 30px 0;
+	
+}
+
+.sm-btn span{
+	margin: 0 0 0 40px;
 }
 
 .fb-btn{
@@ -376,17 +405,32 @@ nav .active{
 	background-position-x: 10px;
 }
 
+/* Login */
+#login .content form button{
+	width: 100px;
+	height: 36px;
+	margin: 20px 0;
+} 
+
+#login .content form a{
+	font-size: 12px;
+	margin: 0 0 0 70px;
+}
+
+#login .content form a:hover{
+	color: #E67E22;
+	cursor: pointer;
+}
+
+#login .content button:last-child{
+	width: 300px;
+	height: 35px;
+	line-height: 35px;
+	font-size: 16px;
+	margin: 60px auto 0 auto;
+}
+
 /* Register*/
-#register nav{
-	margin: 0 0 90px 0;
-}
-
-#register .content{
-	width: 640px;
-	height: 375px;
-	margin: 0 auto;
-}
-
 #register .content h1{
 	margin: 0 0 30px 0;
 	text-align: center;
@@ -394,32 +438,6 @@ nav .active{
 
 #register .content p{
 	text-align: center;
-}
-
-.reg-or{
-	text-align: center;
-}
-
-#register .content form{
-	width: 300px;
-	margin: 0 auto;
-}
-
-#register .content form input{
-	display: block;
-	width: 300px;
-	height: 36px;
-	margin: 10px 0;
-	-webkit-border-radius: 3px;
-	-moz-border-radius: 3px;
-	border-radius: 3px;
-	border: #E67E22 solid 1px;
-	padding-left: 10px;
-}
-
-.login-{
-	text-decoration: none;
-	color: #E67E22;
 }
 
 #register button{
@@ -435,11 +453,6 @@ nav .active{
 #register .content p a:hover{
 	color: #E67E22;
 }
-
-#register footer{
-	margin: 90px 0 0 0;
-}
-
 
 
 
