[#50577915] - User drop down added with submenu

--- a/css/main.css
+++ b/css/main.css
@@ -252,22 +252,29 @@ nav form input{
 	margin-right: 10px;
 }
 
-.user-dd-menu{
+.user-dd ul{
 	display: none;
 	background-color: #2C3E50;
+	-webkit-border-bottom-right-radius: 3px;
+	-webkit-border-bottom-left-radius: 3px;
+	-moz-border-radius-bottomright: 3px;
+	-moz-border-radius-bottomleft: 3px;
+	border-bottom-right-radius: 3px;
+	border-bottom-left-radius: 3px;
+	margin: 0;
+	padding: 0;
 	width: 100%;
-	-webkit-border-radius: 3px;
-	-moz-border-radius: 3px;
-	border-radius: 3px;
 }
 
-.user-dd-menu ul{
-	position: absolute;
+.user-dd ul li{
+	font-size: 14px;
 }
 
-.user-dd-menu ul li:hover{
-	background-color: #34495E;
+.user-dd ul li:hover{
+	background: #34495E;
 }
+
+
 
 /* 	Content Styles 
 	-------------------
