--- a/css/main.css
+++ b/css/main.css
@@ -281,12 +281,19 @@ nav form input{
 
 
 /* 	Content Styles 
+	Not Logged In
 	-------------------
 	-------------------
 	------------------- */
 
 
 /* Landing */
+
+#landing .content{
+	width: 100%;
+	margin: 0 auto;
+}
+
 .cta-search{
 	width: 940px;
 	margin: 0 auto;
@@ -553,6 +560,74 @@ nav form input{
 
 #register .content p a:hover{
 	color: #E67E22;
+}
+
+
+
+
+/* 	Content Styles
+	Logged In User
+	-------------------
+	-------------------
+	------------------- */
+	
+/* User Dashboard Styles */
+
+/* Tab Navigation */
+#user-dashboard .content h1{
+	color: #2C3E50;
+	font-size: 26px;
+}
+
+#user-dashboard .content h2{
+	color: #2C3E50;
+	font-size: 20px;
+}
+
+.ud-tabs{
+	float: left;
+	width: 140px;
+	padding: 0;
+}
+
+.ud-tabs li{
+	list-style: none;
+	height: 100px;
+	font-size: 14px;
+}
+
+.ud-tabs li a{
+	vertical-align: middle;
+	text-decoration: none;
+}
+
+.ud-tab-active{
+	background-color: #FFF;
+	-webkit-border-top-left-radius: 3px;
+	-webkit-border-bottom-left-radius: 3px;
+	-moz-border-radius-topleft: 3px;
+	-moz-border-radius-bottomleft: 3px;
+	border-top-left-radius: 3px;
+	border-bottom-left-radius: 3px;
+}
+
+.ud-tabs li img{
+	display: block;
+	margin: 0 auto;
+}
+
+/* Content */
+.ud-tab-content{
+	float: right;
+	width: 800px;
+}
+
+#user-dashboard .content > div{
+
+}
+
+.recently-studied p{
+	clear: both;
 }
 
 
