--- a/css/main.css
+++ b/css/main.css
@@ -572,37 +572,48 @@ nav form input{
 	------------------- */
 	
 /* User Dashboard Styles */
-
-/* Tab Navigation */
 #user-dashboard .content h1{
 	color: #2C3E50;
 	font-size: 26px;
 }
 
-#user-dashboard .content h2{
-	color: #2C3E50;
-	font-size: 20px;
-}
-
+/* Tab Navigation */
 .ud-tabs{
 	float: left;
 	width: 140px;
 	padding: 0;
+	margin: 0;
 }
 
 .ud-tabs li{
 	list-style: none;
-	height: 100px;
 	font-size: 14px;
 }
 
 .ud-tabs li a{
-	vertical-align: middle;
+/* 	vertical-align: middle; */
 	text-decoration: none;
+	color: #000;
+	height: 100px;
+	text-align: center;
+	display: block;
+	line-height: 140px;
+	background-position: center top;
+	background-position-y: 10px;
+	background-repeat: no-repeat;
+}
+
+.ud-tabs li a:hover{
+	color: #E67E22;
+}
+
+.ud-tabs li a:active{
+	color: #000;
 }
 
 .ud-tab-active{
 	background-color: #FFF;
+	background-repeat: no-repeat;
 	-webkit-border-top-left-radius: 3px;
 	-webkit-border-bottom-left-radius: 3px;
 	-moz-border-radius-topleft: 3px;
@@ -611,19 +622,28 @@ nav form input{
 	border-bottom-left-radius: 3px;
 }
 
-.ud-tabs li img{
-	display: block;
-	margin: 0 auto;
+.ud-tab-active a{
+	font-weight: 700;
+/* 	background-image: url("../img/icons/active_user_globe.png"); */
+	background-repeat: no-repeat;
+	background-size: 36px 44px;
+	width: 100%;
 }
 
 /* Content */
-.ud-tab-content{
-	float: right;
-	width: 800px;
+#user-dashboard .content h2{
+	color: #2C3E50;
+	font-size: 20px;
 }
 
-#user-dashboard .content > div{
-
+.ud-tab-content{
+	overflow: hidden;
+	width: 760px;
+	background: #FFF;
+	-webkit-border-radius: 3px;
+	-moz-border-radius: 3px;
+	border-radius: 3px;
+	padding: 20px;
 }
 
 .recently-studied p{
