[#50581757] - User dashboard, notification tabs placeholder content added and notifications styled.

--- a/css/main.css
+++ b/css/main.css
@@ -804,6 +804,62 @@ nav form input{
 	color: #E67E22;
 }
 
+/* Notifications Styles */
+.user-notification{
+	margin: 20px 0;
+	padding: 50px 0 0 0;
+}
+
+.user-notification:last-child{
+	padding-bottom: 50px;
+}
+
+.user-notification:first-child{
+	padding: 0;
+}
+
+.user-notification img{
+	float: left;
+	margin: 0 20px 0 0;
+}
+
+.user-notification p{
+	margin: 0;
+	padding: 0;
+}
+
+.user-notification p:nth-child(2){
+	font-size: 12px;
+	padding: 5px 0 0 0;
+}
+
+.user-notification p:nth-child(3){
+	float: left;
+	margin: 5px 0 0 0;
+}
+
+.user-notification p a{
+	text-decoration: none;
+	color: #E67E22;
+}
+
+.user-notification p a:hover{
+	color: #D35400;
+}
+
+.user-notification button{
+	font-size: 12px;
+	width: 70px;
+	height: 25px;
+	float: right;
+	margin: 0 10px 0 0;
+}
+
+.user-notification button:first-child{
+	margin: 0;
+	padding: 0;
+}
+
 /* 	Footer 
 	-------------------
 	-------------------
