--- a/css/main.css
+++ b/css/main.css
@@ -694,7 +694,8 @@ nav form input{
 #user-dashboard .content h2{
 	color: #2C3E50;
 	font-size: 20px;
-	padding: 0 0 10px 0;	
+	padding: 0 0 10px 0;
+	margin-bottom: 0;
 }
 
 .ud-tab-content{
@@ -919,10 +920,80 @@ nav form input{
 	padding: 0;
 }
 
+/* Acheivements  */
+.level-progress{
+	margin: 20px 0 0 0;
+	height: 20px;
+	position: relative;
+	background: #54544D;
+	-webkit-border-radius: 3px;
+	-moz-border-radius: 3px;
+	border-radius: 3px;
+	padding: 10px;
+}
+
+.level-progress span{
+	float: left;
+	position: relative;
+	display: hidden;
+	height: 100%; 
+	display: block;
+	padding: 0;
+	margin: 0;
+	border-right: 1px solid #54544D;
+}
+
+.level-progress span:first-child{
+	width: 10%;
+	-webkit-border-top-left-radius: 20px;
+	-webkit-border-bottom-left-radius: 20px;
+	-moz-border-radius-topleft: 20px;
+	-moz-border-radius-bottomleft: 20px;
+	border-top-left-radius: 20px;
+	border-bottom-left-radius: 20px;
+	background-color: green;
+}
+
+.level-progress span:nth-child(2){
+/* 	background-color: orange; */
+	background-color: #FFF;
+/* 	border: 1px solid #000; */
+	width: 20%;
+}
+
+.level-progress span:nth-child(2) span:first-child{
+	background-color: orange;
+	width: 59%;
+	border: none;
+	border-radius: 0;
+	-webkit-border-radius: 0;
+	-moz-border-radius: 0;
+}
+
+.level-progress span:nth-child(3){
+/* 	background-color: blue; */
+	background-color: #FFF;
+/* 	border: 1px solid #000; */
+	width: 30%;
+}
+
+.level-progress span:nth-child(4){
+	background-color: purple;
+	background-color: #FFF;
+	border: none;
+	width: 39%;
+	-webkit-border-top-right-radius: 20px;
+	-webkit-border-bottom-right-radius: 20px;
+	-moz-border-radius-topright: 20px;
+	-moz-border-radius-bottomright: 20px;
+	border-top-right-radius: 20px;
+	border-bottom-right-radius: 20px;
+}
+
 /* User Settings */
 #settings form img{
 	float: left;
-	margin: 0 0 30px 0;
+	margin: 20px 0 20px 0;
 }
 
 #settings form input{
