--- a/css/main.css
+++ b/css/main.css
@@ -921,7 +921,22 @@ nav form input{
 }
 
 /* Acheivements  */
+#achievements p:nth-child(3){
+	float: left;
+	margin: 0 0 10px 0;
+	font-size: 14px;
+	
+}
+
+#achievements p:nth-child(4){
+	float: right;
+	margin: 0 10px 10px 0;
+	font-size: 14px;
+	font-weight: 600;
+}
+
 .level-progress{
+	clear: both;
 	margin: 20px 0 0 0;
 	height: 20px;
 	position: relative;
@@ -945,49 +960,84 @@ nav form input{
 
 .level-progress span:first-child{
 	width: 10%;
+	background-color: #FFF;
 	-webkit-border-top-left-radius: 20px;
 	-webkit-border-bottom-left-radius: 20px;
 	-moz-border-radius-topleft: 20px;
 	-moz-border-radius-bottomleft: 20px;
 	border-top-left-radius: 20px;
 	border-bottom-left-radius: 20px;
+}
+
+.level-progress span:first-child span:first-child{
 	background-color: green;
+	border: none;
+	width: 100%;
+	-webkit-border-top-left-radius: 20px;
+	-webkit-border-bottom-left-radius: 20px;
+	-moz-border-radius-topleft: 20px;
+	-moz-border-radius-bottomleft: 20px;
+	border-top-left-radius: 20px;
+	border-bottom-left-radius: 20px;
 }
 
 .level-progress span:nth-child(2){
-/* 	background-color: orange; */
 	background-color: #FFF;
-/* 	border: 1px solid #000; */
 	width: 20%;
 }
 
 .level-progress span:nth-child(2) span:first-child{
 	background-color: orange;
-	width: 59%;
+	width: 87%;
 	border: none;
 	border-radius: 0;
 	-webkit-border-radius: 0;
 	-moz-border-radius: 0;
+/* 	display: none; */
 }
 
 .level-progress span:nth-child(3){
-/* 	background-color: blue; */
 	background-color: #FFF;
-/* 	border: 1px solid #000; */
 	width: 30%;
 }
 
+.level-progress span:nth-child(3) span:first-child{
+	background-color: blue;
+	width: 12%;
+	border: none;
+	border-radius: 0;
+	-webkit-border-radius: 0;
+	-moz-border-radius: 0;
+	display: none;
+}
+
 .level-progress span:nth-child(4){
-	background-color: purple;
 	background-color: #FFF;
 	border: none;
 	width: 39%;
+	height: 100%;
 	-webkit-border-top-right-radius: 20px;
 	-webkit-border-bottom-right-radius: 20px;
 	-moz-border-radius-topright: 20px;
 	-moz-border-radius-bottomright: 20px;
 	border-top-right-radius: 20px;
 	border-bottom-right-radius: 20px;
+}
+
+.level-progress span:nth-child(4) span:first-child{
+	background-color: blue;
+	width: 89%%;
+	border: none;
+	border-radius: 0;
+	-webkit-border-radius: 0;
+	-moz-border-radius: 0;
+	background-color: purple;
+	display: none;
+}
+
+#achievements h3:nth-child(6){
+	clear: both;
+	margin: 40px 0;
 }
 
 /* User Settings */
