--- a/css/main.css
+++ b/css/main.css
@@ -1160,11 +1160,17 @@ nav form input{
 	width: 200px;
 	background: #FFF;
 	padding: 10px 10px;
+	overflow: hidden;
+	float: left;
 }
 
 #user-profile aside > p{
-	margin: 20px 0 0 0;
 	font-weight: 700;
+	font-size: 14px;
+}
+
+#user-profile aside > p span{
+	float: right;
 }
 
 #user-profile .level-progress{
@@ -1181,17 +1187,27 @@ nav form input{
 
 .friends-list h2{
 	float: left;
-	margin: 20px 0 20px; 0;
+	margin: 10px 0 20px; 0;
 	padding: 0;
 	
 }
 
 .friends-list h2:first-child{
-	margin-right: 80px;
+/* 	margin-right: 80px; */
 }
 
 .friend{
 	clear: both;
+	overflow: hidden;
+	padding: 0;
+	margin: 20px 0;
+/*
+	background-image: url("../img/icons/award.png");
+	background-size: 15px 15px;
+	background-repeat: no-repeat;
+	background-position: right center;
+*/
+	font-size: 12px;
 }
 
 .friend img{
@@ -1199,18 +1215,73 @@ nav form input{
 }
 
 .friend h3{
-	float: left;
 	font-weight: 600;
-	margin: 15px 0 0 20px;
+	margin: 5px 0 0 20px;
+	display: inline-block;
 }
 
-.friend p:nth-child(3){
-	clear: both;
+.friend h3 a{
+	text-decoration: none;
+	color: #000;
+}
+
+.friend h3 a:hover{
+	color: #E67E22;
+}
+
+.friend p{
+	display: inline-block;
 	padding: 0;
 	margin: 0;
+	margin: 5px 0 0 20px;
 }
 
-.
+.friends-list p:last-child a{
+	float: right;
+	text-decoration: none;
+	color: #000;
+}
+
+.friends-list p:last-child a:hover{
+	color: #E67E22;
+}
+
+.profile{
+	overflow: hidden;
+	width: 700px;
+	background: #FFF;
+	-webkit-border-radius: 3px;
+	-moz-border-radius: 3px;
+	border-radius: 3px;
+	margin: 0;
+	float: right;
+}
+
+.user-info{
+	padding: 0 20px 20px 20px;
+}
+
+.user-info h2{
+	float: left;
+}
+
+.user-info button:nth-child(2){
+	width: 100px;
+	height: 30px;
+	font-size: 14px;
+	float: right;
+	margin: 20px 20px 0 0;
+}
+
+.user-info .your-decks{
+	clear: both;
+	overflow: hidden;
+}
+
+.user-info .your-decks .deck{
+	width: 300px;
+	margin-right: 30px;
+}
 
 /* 	Footer 
 	-------------------
