--- a/css/main.css
+++ b/css/main.css
@@ -1428,6 +1428,7 @@ nav form input{
 .study-content{
 	width: 700px;
 	float: right;
+	background: #FFF;
 }
 
 .study-content .header{
@@ -1438,6 +1439,7 @@ nav form input{
 	border-top-left-radius: 03px;
 	border-top-right-radius: 03px;
 	height: 40px;
+	margin-bottom: 20px;
 }
 
 .study-content .header a{
@@ -1454,6 +1456,43 @@ nav form input{
 
 .active-study-tab{
 	font-weight: 600;
+}
+
+.study-content button{
+	height: 25px;
+	width: auto;
+	font-size: 12px;
+	margin-left: 20px;
+}
+
+.study-content button:nth-child(2), .study-content button:nth-child(3){
+	background-color: #54544D;
+}
+
+/* NOT WORKING! */
+.card-sort-active button{
+	background-color: #2C3E50;
+}
+
+.study-content button:nth-child(6), .study-content button:nth-child(7){
+	float: right;
+	margin-right: 20px;
+}
+
+.study-content button:nth-child(7){
+	display: none;
+}
+
+.study-content input, .study-content label{
+	position: relative;
+	top: 2px;
+}
+.study-content input{
+	margin: 0 5px 0 20px;
+}
+
+.study-content label{
+	font-size: 14px;
 }
 
 
